fixed cropping of community image

--- a/website/inc/css/style.css
+++ b/website/inc/css/style.css
@@ -55,7 +55,7 @@ article header h2 {
     font-weight: bold;
 }
 
-article header img {
+article header img.profile-pic {
     object-fit: cover;
     width: 30px;
     height: 30px;
